更新 .env.template 文件，添加默认的服务端点和模型名称；修改 build_agent 函数以从环境变量读取这些值，保持向后兼容性

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,11 @@
+# Copy this file to .env and fill in values. Do NOT commit secrets to source control.
+# 将此文件复制为 .env 并填写相应的值。请勿将密钥提交到源代码管理中。
+
 DASHSCOPE_API_KEY="your_api_key_here"
-# 请复制上面的行到 .env 文件中，并将 your_api_key_here 替换为您的实际 API 密钥。
+# 将 your_api_key_here 替换为您的实际 API 密钥。
+
+# DashScope compatible endpoint (可使用仓库默认 URL)
+DASHSCOPE_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
+
+# 模型名称 (示例: qwen-flash, qwen-plus)
+DASHSCOPE_MODEL=qwen-flash
