--- a/.env.template
+++ b/.env.template
@@ -5,7 +5,7 @@ DASHSCOPE_API_KEY="your_api_key_here"
 # 将 your_api_key_here 替换为您的实际 API 密钥。
 
 # DashScope compatible endpoint (可使用仓库默认 URL)
-DASHSCOPE_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
+DASHSCOPE_BASE_URL="https://dashscope.aliyuncs.com/compatible-mode/v1"
 
 # 模型名称 (示例: qwen-flash, qwen-plus)
-DASHSCOPE_MODEL=qwen-flash
+DASHSCOPE_MODEL="qwen-flash"
