--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,6 @@ DASHSCOPE_BASE_URL="https://dashscope.aliyuncs.com/compatible-mode/v1"
 
 # 模型名称 (示例: qwen-flash, qwen-plus)
 DASHSCOPE_MODEL="qwen-flash"
+
+# Feishu MCP 服务地址 (示例: https://mcp.feishu.cn/mcp/mcp_123)
+MCP_FEISHU_URL="https://mcp.feishu.cn/mcp/your_mcp_id"
