--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
   "langgraph>=0.2.10",
   "langchain-openai>=0.2.8",
   "langchain-core>=0.3.20",
+  "langchain-mcp-adapters>=0.1.0",
   "httpx[socks]>=0.27.0",
 ]
 
