更新环境配置，添加沙箱 MCP 服务地址并修改 FastMCP 初始化参数；删除不再使用的示例文件。

--- a/.env.template
+++ b/.env.template
@@ -10,5 +10,6 @@ DASHSCOPE_BASE_URL="https://dashscope.aliyuncs.com/compatible-mode/v1"
 # 模型名称 (示例: qwen-flash, qwen-plus)
 DASHSCOPE_MODEL="qwen-flash"
 
-# Feishu MCP 服务地址 (示例: https://mcp.feishu.cn/mcp/mcp_123)
-MCP_FEISHU_URL="https://mcp.feishu.cn/mcp/your_mcp_id"
+# MCP 服务地址 (示例: https://mcp.feishu.cn/mcp/mcp_123)
+# MCP_FEISHU_URL="https://mcp.feishu.cn/mcp/your_mcp_id"
+MCP_SANDBOX_URL="http://127.0.0.1:9000"
