--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
   "langchain-core>=0.3.20",
   "langchain-mcp-adapters>=0.1.0",
   "httpx[socks]>=0.27.0",
+  "fastmcp>=2.14.4",
 ]
 
 [project.scripts]
