添加 Portkey 集成支持，更新环境变量配置；删除不再使用的 README 和 bootstrap 脚本；新增 hello_world 示例文件

--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,9 @@ DASHSCOPE_API_KEY="your_api_key_here"
 # DashScope compatible endpoint (可使用仓库默认 URL)
 DASHSCOPE_BASE_URL="https://dashscope.aliyuncs.com/compatible-mode/v1"
 
+# Portkey API Key (可选，如果不使用 Portkey 相关功能可留空，或者注释掉此行)
+# PORTKEY_API_KEY=""
+
 # 模型名称 (示例: qwen-flash, qwen-plus)
 DASHSCOPE_MODEL="qwen-flash"
 
